added test completed full versions (with mobile/tablet)

--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -154,7 +154,7 @@
                       </div>
                     </div>
                     <div class="test-result__quest-content">
-                      <div class="test-result__img">
+                      <div class="test-result__media">
                         <img src="img/plane-pic.png" alt="">
                       </div>
                       <div class="test-result__answers">
@@ -175,13 +175,25 @@
                       </div>
                     </div>
                   </div>
+                  <div class="test-result__item">
+                    <div class="test-result__quest-wrap">
+                      <span class="test-result__quest-num error">3</span>
+                      <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
+                    </div>
+                    <div class="test-result__quest-content">
+                      <div class="test-result__answers">
+                        <p class="test-result__error">Electronic interception</p>
+                        <p class="test-result__correct">Helicopter training</p>
+                      </div>
+                    </div>
+                  </div>
                 </div>
 
 
                 <div class="section-nav section-nav--test section-nav--complete">
                   <p class="section-nav__next-text">Next section: <a href="" class="section-nav__next-link">Aero Engines</a></p>
                   <a href="" class="btn btn--icon btn--next btn--green">
-                    <span class="btn-text">Next question</span>
+                    <span class="btn-text">Next section</span>
                     <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                   </a>
                 </div>
@@ -209,6 +221,77 @@
               </div>
             </aside>
           </div>
+
+        </div>
+      </div><!-- end container -->
+    </section>
+
+    <section class="course-section__body">
+      <div class="container container--small">
+        <h1 class="course-section__title h2">
+          <span class="course-section__title-icon"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg></span>
+          <span class="course-section__title-text">Section 4 - Experimental Grapical Forecasts</span>
+        </h1>
+
+        <div class="row">
+
+          <div class=" col-sm-12 col-md-8">
+            <div class="test-content">
+
+              <div class="test-nav test-nav--complete">
+                <div class="test-progress test-progress--long">
+                  <a href="" class="test-progress__step test-progress__step--passed">1</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">2</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">3</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">4</a>
+                  <a href="" class="test-progress__step test-progress__step--error">5</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">6</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">7</a>
+                  <a href="" class="test-progress__step test-progress__step--error">8</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">9</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">10</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">11</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">12</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">13</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">14</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">15</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">16</a>
+                  <a href="" class="test-progress__step test-progress__step--error">17</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">18</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">19</a>
+                  <a href="" class="test-progress__step test-progress__step--error">20</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">21</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">22</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">23</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">24</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">25</a>
+                  <a href="" class="test-progress__step test-progress__step--error">26</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">27</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">28</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">29</a>
+                  <a href="" class="test-progress__step test-progress__step--passed">30</a>
+                </div>
+              </div>
+
+              <div class="test-complete">
+                <div class="test-complete__info">
+                  <span class="test-complete__percent">86%</span>
+                  <p class="test-complete__title">30-questions quest<br/>
+                  <span class="test-complete__stat">25 of 30 answers are correct</span>
+                  </p>
+                </div>
+                <div class="test-complete__links">
+                  <a href="" class="btn btn--icon btn--next btn--green">
+                    <span class="btn-text">Next section</span>
+                    <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                  </a>
+                  <p class="test-complete__next-text">Next section: <a href="" class="test-complete__next-link">Aero Engines</a></p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+
 
         </div>
       </div><!-- end container -->
