--- a/src/course-test.html
+++ b/src/course-test.html
@@ -42,52 +42,52 @@
         <p class="section-nav__title">3496 Aviation Weather Forecasts course (5/11 completed)</p>
         <div class="section-nav__links">
 
-          <a href="" class="section-nav__back btn btn--icon btn--back">
+          <a href="#" class="section-nav__back btn btn--icon btn--back">
             <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             <span class="btn-text">Back to course</span>
           </a>
 
           <div class="section-nav__btns">
-            <a href="" class="course-section__head-arrow btn btn--arrow"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
+            <a href="#" class="course-section__head-arrow btn btn--arrow"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
 
-            <a href="" class="section-nav__next btn btn--icon btn--next">
+            <a href="#" class="section-nav__next btn btn--icon btn--next">
               <span class="btn-text">Next section</span>
               <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             </a>
           </div>
 
           <div class="section-nav__progress section-progress">
-            <a href="" class="section-progress__step section-progress__step--passed">
+            <a href="#" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step section-progress__step--passed">
+            <a href="#" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step section-progress__step--passed">
+            <a href="#" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step section-progress__step--passed">
+            <a href="#" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
             </a>
-            <a href="" class="section-progress__step section-progress__step--passed">
+            <a href="#" class="section-progress__step section-progress__step--passed">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step section-progress__step--current">
+            <a href="#" class="section-progress__step section-progress__step--current">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step">
+            <a href="#" class="section-progress__step">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step">
+            <a href="#" class="section-progress__step">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
             </a>
-            <a href="" class="section-progress__step">
+            <a href="#" class="section-progress__step">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 8.021 12.164"><path d="M3.846 0C5.95 0 8.021.969 8.021 3.287c0 2.137-2.449 2.959-2.975 3.732-.395.574-.263 1.381-1.348 1.381-.707 0-1.052-.575-1.052-1.101 0-1.957 2.876-2.4 2.876-4.012 0-.887-.59-1.413-1.577-1.413-2.104 0-1.282 2.169-2.876 2.169C.494 4.043 0 3.698 0 3.041 0 1.429 1.84 0 3.846 0zm-.082 9.467c.739 0 1.348.607 1.348 1.348s-.608 1.348-1.348 1.348-1.348-.607-1.348-1.348c0-.74.608-1.348 1.348-1.348z" /></svg>
             </a>
-            <a href="" class="section-progress__step">
+            <a href="#" class="section-progress__step">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
-            <a href="" class="section-progress__step">
+            <a href="#" class="section-progress__step">
               <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11.962 11.73"><path d="M0 11.73h8.962V9.775H0v1.955zm0-4.887h11.962V4.888H0v1.955zM0 0v1.955h11.962V0H0z" /></svg>
             </a>
           </div>
@@ -112,23 +112,23 @@
 
               <div class="test-nav test-nav--complete">
                 <div class="test-progress">
-                  <a href="" class="test-progress__step">1</a>
-                  <a href="" class="test-progress__step">2</a>
-                  <a href="" class="test-progress__step">3</a>
-                  <a href="" class="test-progress__step">4</a>
-                  <a href="" class="test-progress__step test-progress__step--missed">5</a>
-                  <a href="" class="test-progress__step">6</a>
-                  <a href="" class="test-progress__step">7</a>
-                  <a href="" class="test-progress__step test-progress__step--current">8</a>
-                  <a href="" class="test-progress__step test-progress__step--missed">9</a>
-                  <a href="" class="test-progress__step test-progress__step--missed">10</a>
-                  <a href="" class="test-progress__step test-progress__step--missed">11</a>
-                  <a href="" class="test-progress__step test-progress__step--missed">12</a>
+                  <a href="#" class="test-progress__step">1</a>
+                  <a href="#" class="test-progress__step">2</a>
+                  <a href="#" class="test-progress__step">3</a>
+                  <a href="#" class="test-progress__step">4</a>
+                  <a href="#" class="test-progress__step test-progress__step--missed">5</a>
+                  <a href="#" class="test-progress__step">6</a>
+                  <a href="#" class="test-progress__step">7</a>
+                  <a href="#" class="test-progress__step test-progress__step--current">8</a>
+                  <a href="#" class="test-progress__step test-progress__step--missed">9</a>
+                  <a href="#" class="test-progress__step test-progress__step--missed">10</a>
+                  <a href="#" class="test-progress__step test-progress__step--missed">11</a>
+                  <a href="#" class="test-progress__step test-progress__step--missed">12</a>
                 </div>
                 <div class="test-nav__btns">
-                  <a href="" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
+                  <a href="#" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
 
-                  <a href="" class="section-nav__next btn btn--icon btn--next">
+                  <a href="#" class="section-nav__next btn btn--icon btn--next">
                     <span class="btn-text">Next question</span>
                     <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                   </a>
@@ -190,8 +190,8 @@
                 </div>
                 <div class="section-nav section-nav--test">
                   <div class="section-nav__btns">
-                    <a href="" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
-                    <a href="" class="section-nav__next btn btn--icon btn--next">
+                    <a href="#" class="course-section__head-arrow btn btn--arrow btn--arrow--hover"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
+                    <a href="#" class="section-nav__next btn btn--icon btn--next">
                       <span class="btn-text">Next question</span>
                       <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                     </a>
