Правки и JS для аккордеона

--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -142,12 +142,12 @@
                   <p class="test-complete__next-text">Next section: <a href="#" class="test-complete__next-link">Aero Engines</a></p>
                 </div>
               </div>
-              
+
               <div class="test-result">
-                
+
                 <div class="test-result__wrap">
                   <div class="test-result__item test-result__item--active">
-                    <div class="test-result__quest-wrap">
+                    <div class="test-result__quest-wrap js-accordeon">
                       <span class="test-result__quest-num error">1</span>
                       <div class="test-result__quest">The P-3 Orion has been on Navy duty since about 1960. <br/>
                       It's almost as long-lived as the venerable B-52. Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours. It's primary mission is what?
@@ -163,7 +163,7 @@
                     </div>
                   </div>
                   <div class="test-result__item test-result__item--active">
-                    <div class="test-result__quest-wrap">
+                    <div class="test-result__quest-wrap js-accordeon">
                       <span class="test-result__quest-num error">2</span>
                       <div class="test-result__quest">It's primary mission is what?
                       </div>
@@ -176,7 +176,7 @@
                     </div>
                   </div>
                   <div class="test-result__item">
-                    <div class="test-result__quest-wrap">
+                    <div class="test-result__quest-wrap js-accordeon">
                       <span class="test-result__quest-num error">3</span>
                       <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
                     </div>
