--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -43,16 +43,16 @@
         <div class="section-nav__links">
 
           <a href="#" class="section-nav__back btn btn--icon btn--back">
-            <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+            <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             <span class="btn-text">Back to course</span>
           </a>
 
           <div class="section-nav__btns">
-            <a href="#" class="course-section__head-arrow btn btn--arrow"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
+            <a href="#" class="course-section__head-arrow btn btn--arrow"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></a>
 
             <a href="#" class="section-nav__next btn btn--icon btn--next">
               <span class="btn-text">Next section</span>
-              <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+              <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
             </a>
           </div>
 
@@ -130,14 +130,14 @@
               <div class="test-complete">
                 <div class="test-complete__info">
                   <span class="test-complete__percent">86%</span>
-                  <p class="test-complete__title">Test completed<br/>
+                  <p class="test-complete__title">Test completed<br>
                   <span class="test-complete__stat">10 of 12 answers are correct</span>
                   </p>
                 </div>
                 <div class="test-complete__links">
                   <a href="#" class="btn btn--icon btn--next btn--green">
                     <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                   </a>
                   <p class="test-complete__next-text">Next section: <a href="#" class="test-complete__next-link">Aero Engines</a></p>
                 </div>
@@ -149,7 +149,7 @@
                   <div class="test-result__item test-result__item--active">
                     <div class="test-result__quest-wrap js-accordeon">
                       <span class="test-result__quest-num error">1</span>
-                      <div class="test-result__quest">The P-3 Orion has been on Navy duty since about 1960. <br/>
+                      <div class="test-result__quest">The P-3 Orion has been on Navy duty since about 1960. <br>
                       It's almost as long-lived as the venerable B-52. Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours. It's primary mission is what?
                       </div>
                     </div>
@@ -194,7 +194,7 @@
                   <p class="section-nav__next-text">Next section: <a href="#" class="section-nav__next-link">Aero Engines</a></p>
                   <a href="#" class="btn btn--icon btn--next btn--green">
                     <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                   </a>
                 </div>
 
@@ -276,14 +276,14 @@
               <div class="test-complete">
                 <div class="test-complete__info">
                   <span class="test-complete__percent">86%</span>
-                  <p class="test-complete__title">30-questions quest<br/>
+                  <p class="test-complete__title">30-questions quest<br>
                   <span class="test-complete__stat">25 of 30 answers are correct</span>
                   </p>
                 </div>
                 <div class="test-complete__links">
                   <a href="#" class="btn btn--icon btn--next btn--green">
                     <span class="btn-text">Next section</span>
-                    <span class="arrow-icon"><?xml version="1.0" encoding="iso-8859-1"?><svg version="1.1" id="layer_1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
+                    <span class="arrow-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 9.932 10.192" style="enable-background:new 0 0 9.932 10.192;" xml:space="preserve"><path d="M9.932,4.666c0-0.359-0.289-0.651-0.651-0.651H3.886l2.289-2.289c0.253-0.253,0.253-0.665,0-0.923L5.561,0.19c-0.253-0.253-0.665-0.253-0.923,0L0.191,4.636C0.065,4.763,0,4.929,0,5.096c0,0.166,0.065,0.333,0.191,0.46l4.447,4.447c0.253,0.253,0.665,0.253,0.923,0l0.614-0.615c0.253-0.253,0.253-0.665,0-0.923L3.886,6.185h5.391c0.359,0,0.651-0.292,0.651-0.651L9.932,4.666z"/></svg></span>
                   </a>
                   <p class="test-complete__next-text">Next section: <a href="#" class="test-complete__next-link">Aero Engines</a></p>
                 </div>
