--- a/src/profile.html
+++ b/src/profile.html
@@ -13,7 +13,7 @@
     <div class="container container--small">
       <div class="row">
         <div class="col-md-6 col-xs-12">
-          <div class="logo">Online <span class="logo__second">Learning System</span></div>
+          <a href="courses.html" class="logo">Online <span class="logo__second">Learning System</span></a>
         </div>
         <div class="col-md-6 col-xs-12 header__menu">
           <nav class="menu">
