--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -146,8 +146,8 @@
               <div class="test-result">
 
                 <div class="test-result__wrap">
-                  <div class="test-result__item test-result__item--active">
-                    <div class="test-result__quest-wrap js-accordeon">
+                  <div class="test-result__item js-accordeon test-result__item--active">
+                    <div class="test-result__quest-wrap">
                       <span class="test-result__quest-num error">1</span>
                       <div class="test-result__quest">The P-3 Orion has been on Navy duty since about 1960. <br>
                       It's almost as long-lived as the venerable B-52. Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours. It's primary mission is what?
@@ -162,8 +162,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="test-result__item test-result__item--active">
-                    <div class="test-result__quest-wrap js-accordeon">
+                  <div class="test-result__item js-accordeon test-result__item--active">
+                    <div class="test-result__quest-wrap">
                       <span class="test-result__quest-num error">2</span>
                       <div class="test-result__quest">It's primary mission is what?
                       </div>
@@ -175,8 +175,8 @@
                       </div>
                     </div>
                   </div>
-                  <div class="test-result__item">
-                    <div class="test-result__quest-wrap js-accordeon">
+                  <div class="test-result__item js-accordeon">
+                    <div class="test-result__quest-wrap">
                       <span class="test-result__quest-num error">3</span>
                       <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
                     </div>
