fixed border-color for inputs, fixed complete test

--- a/src/course-test-completed.html
+++ b/src/course-test-completed.html
@@ -146,9 +146,9 @@
               <div class="test-result">
 
                 <div class="test-result__wrap">
-                  <div class="test-result__item js-accordeon test-result__item--active">
+                  <div class="test-result__item js-accordeon">
                     <div class="test-result__quest-wrap">
-                      <span class="test-result__quest-num error">1</span>
+                      <span class="test-result__quest-num">1</span>
                       <div class="test-result__quest">The P-3 Orion has been on Navy duty since about 1960. <br>
                       It's almost as long-lived as the venerable B-52. Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours. It's primary mission is what?
                       </div>
@@ -162,22 +162,43 @@
                       </div>
                     </div>
                   </div>
-                  <div class="test-result__item js-accordeon test-result__item--active">
+                  <div class="test-result__item js-accordeon">
                     <div class="test-result__quest-wrap">
-                      <span class="test-result__quest-num error">2</span>
+                      <span class="test-result__quest-num">2</span>
                       <div class="test-result__quest">It's primary mission is what?
                       </div>
                     </div>
                     <div class="test-result__quest-content">
                       <div class="test-result__answers">
-                        <p class="test-result__error">Electronic interception</p>
                         <p class="test-result__correct">Helicopter training</p>
                       </div>
                     </div>
                   </div>
                   <div class="test-result__item js-accordeon">
                     <div class="test-result__quest-wrap">
-                      <span class="test-result__quest-num error">3</span>
+                      <span class="test-result__quest-num">3</span>
+                      <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
+                    </div>
+                    <div class="test-result__quest-content">
+                      <div class="test-result__answers">
+                        <p class="test-result__correct">Helicopter training</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="test-result__item js-accordeon">
+                    <div class="test-result__quest-wrap">
+                      <span class="test-result__quest-num">4</span>
+                      <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
+                    </div>
+                    <div class="test-result__quest-content">
+                      <div class="test-result__answers">
+                        <p class="test-result__correct">Helicopter training</p>
+                      </div>
+                    </div>
+                  </div>
+                  <div class="test-result__item js-accordeon test-result__item--active">
+                    <div class="test-result__quest-wrap">
+                      <span class="test-result__quest-num test-result__quest-num--error">5</span>
                       <div class="test-result__quest">Too big to land on a ship, this 4 turbo-propped beast returns to a shore runway after flights of 10-14 hours.</div>
                     </div>
                     <div class="test-result__quest-content">
