Js для другой кнопки

--- a/src/course-section.html
+++ b/src/course-section.html
@@ -114,7 +114,7 @@
                 <p>The National Weather Service's experimental forecast graphic shows great promise in alerting the public to potential winter threats beyond three days out</p>
                 <p>The National Weather Service's experimental forecast graphic shows great promise in alerting the public to potential winter threats beyond three days out</p>
               </div>
-              <a href="#" class="section-content__descr-btn btn btn--show-all">Show description</a>
+              <a href="#" class="section-content__descr-btn btn btn--show-all js-button-more" data-target="section-content__descr">Show description</a>
 
               <div class="section-content__media">
                 <video controls="controls">
