--- a/src/course.html
+++ b/src/course.html
@@ -264,7 +264,7 @@
                   </div>
                   <form class="forum__comment-answer">
                     <textarea name="answer" rows="3"></textarea>
-                    <button type="submit" class="btn btn--forum btn--submit">Submit</button>
+                    <button type="submit" class="btn btn--forum btn--forum-submit">Submit</button>
                   </form>
                 </div>
               </div>
